added the query url thingie

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         </div>
       </div>
       
-      <div class="sec-frame container-1" id="sec-frame">
+      
+      <div class="container-1">
+        <button type="button" class="btn btn-success none" id="share-btn">Share these results</button>
+        <div class="sec-frame" id="sec-frame">
+        </div>
       </div>
 </body>
 </html>
