--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="https://i.ibb.co/CVTDFYw/Picsart-23-09-24-08-40-673.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
      <meta name="description" content="Your concise and relevant meta description goes here.">
@@ -29,16 +30,28 @@
             <div class="input-group mb-3 justify-content-center">
               <input type="text" class="form-control bg-dark text-light" id="inpt"
                placeholder="https://example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
-              <button class="btn btn-outline-success" type="button" id="button-addon2">check !</button>
+              <button class="btn btn-outline-success" type="button" id="button-addon2">
+                <a href="#results" class="nav-link"> check !</a>
+                </button>
             </div>
         </div>
       </div>
       
-      
+      <div class="btn-ctner" id="results">
+        <button type="button" class="btn btn-success none" id="share-btn">Share results</button>
+      </div>
       <div class="container-1">
-        <button type="button" class="btn btn-success none" id="share-btn">Share these results</button>
         <div class="sec-frame" id="sec-frame">
         </div>
+      </div>
+
+      <div class="info none">
+        <h5>How hackers can use click jacking attacks on your site? </h5>
+        <p>a clickjacking attack is possible because of html "iframe" tags,
+          if a website allow itself to be opened in an iframe tag then the application is vulnerable to clickjacking.
+        </p>
+
+
       </div>
 </body>
 </html>
