--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
      crossorigin="anonymous"></script>
      
-    <link rel="icon" href="https://i.ibb.co/CVTDFYw/Picsart-23-09-24-08-40-673.png">
+    <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
      <meta name="description" content="Your concise and relevant meta description goes here.">
@@ -21,7 +21,8 @@
     <nav class="navbar navbar-dark bg-dark" style="background-color: #1b1b1b !important;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="https://i.ibb.co/CVTDFYw/Picsart-23-09-24-08-40-673.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+            <img 
+            src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
             <span >Click Jacking</span>
           </a>
         </div>
@@ -29,7 +30,7 @@
       
       <div class="sec-1 section" id="sec-1">
         <h1>Test your site</h1>
-        <h3>against click jacking</h3>
+        <h4>against <span class="red"> click jacking</span></h3>
         <div class="container-1">
             <div class="input-group mb-3 justify-content-center">
               <input type="text" class="form-control bg-dark text-light" id="inpt"
@@ -48,14 +49,6 @@
         <div class="sec-frame" id="sec-frame">
         </div>
       </div>
-
-      <div class="info none">
-        <h5>How hackers can use click jacking attacks on your site? </h5>
-        <p>a clickjacking attack is possible because of html "iframe" tags,
-          if a website allow itself to be opened in an iframe tag then the application is vulnerable to clickjacking.
-        </p>
-
-
       </div>
 </body>
 </html>
