--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
   <!-- adsense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
      crossorigin="anonymous"></script>
-     
+     <meta property="og:image" content=""/>
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-     <meta name="description" content="Your concise and relevant meta description goes here.">
-    <title>Click Jacking Testing </title>
+    <meta name="description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
+    <title>Click Jacking Tester</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- my stylings -->
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <!-- social sharing -->
+    <meta property="og:title" content="Clickjacking Tester">
+<meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
+<meta property="og:image" content="https://i.ibb.co/2nsccvQ/Black-White-Elegant-Phone-Review-Blog-Banner.png">
+<meta property="og:url" content="https://click-jacking.github.io/">
+<meta property="og:type" content="website">
+
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark" style="background-color: #1b1b1b !important;">
@@ -23,7 +30,7 @@
           <a class="navbar-brand" href="#">
             <img 
             src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
-            <span >Click Jacking</span>
+            <span >Click Jacking Tester</span>
           </a>
         </div>
       </nav>
