--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- my stylings -->
-    <script defer src="script.js"></script>
+    <script defer type="module" src="script.js"></script>
+    <script defer type="module" src="data.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
@@ -57,5 +58,8 @@
         </div>
       </div>
       </div>
+      <div id="resultsDiv"></div>
+      <img src="assets/red (1).png" alt="" width="50">
+      <img src="assets/green.png" alt="" width="50">
 </body>
 </html>
