--- a/index.html
+++ b/index.html
@@ -49,17 +49,23 @@
             </div>
         </div>
       </div>
-      
-      <div class="btn-ctner" id="results">
-        <button type="button" class="btn btn-success none" id="share-btn">Share results</button>
+      <div class="container-1 ">
+        <div class="btn-ctner none" id="results">
+          <a class="nav-link" href="#bottom">View test results</a>
+          <button type="button" class="btn btn-success" id="share-btn">Share results</button>
+        </div>
       </div>
+
       <div class="container-1">
         <div class="sec-frame" id="sec-frame">
         </div>
       </div>
       </div>
-      <div id="resultsDiv"></div>
-      <img src="assets/red (1).png" alt="" width="50">
-      <img src="assets/green.png" alt="" width="50">
+      <div class="container-1">
+        <div id="resultsDiv">
+
+        </div>
+      </div>
+      <div id="bottom"></div>
 </body>
 </html>
