--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
 <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
-<meta property="og:image" content="https://i.ibb.co/2nsccvQ/Black-White-Elegant-Phone-Review-Blog-Banner.png">
+<meta property="og:image" content="assets/banner.png">
 <meta property="og:url" content="https://click-jacking.github.io/">
 <meta property="og:type" content="website">
 
