--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="footer.css">
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
+    <meta name="keywords" content="Test Clickjacking, Online clickjacking test, Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
     <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
     <meta property="og:image" content="https://i.ibb.co/2nsccvQ/Black-White-Elegant-Phone-Review-Blog-Banner.png">
     <meta property="og:url" content="https://click-jacking.github.io/">
@@ -46,29 +47,30 @@
               <input type="text" class="form-control bg-dark text-light" id="inpt"
                placeholder="https://example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
               <button class="btn btn-outline-success" type="button" id="button-addon2">
-                <a href="#results" class="nav-link"> check !</a>
+                  check !
                 </button>
             </div>
         </div>
       </div>
-      <div class="container-1 ">
-        <div class="btn-ctner none" id="results">
-          <a class="nav-link" href="#bottom">View test results</a>
-          <button type="button" class="btn btn-success" id="share-btn">Share results</button>
-        </div>
-      </div>
+      <div class="btn-shr">
+        <button type="button" class="btn btn-success none" id="share-btn">Share results</button>
 
-      <div class="container-1">
+      </div>
+      <div class="container-1 sec-con">
         <div class="sec-frame" id="sec-frame">
         </div>
+        <div class="container-1">
+          <div id="resultsDiv">
+            
+          </div>
+          <div class="btn-ctner none" id="results">
+              </div>
+            </div>
       </div>
+              <div class="container-1 ">
+          
+              </div>
       </div>
-      <div class="container-1">
-        <div id="resultsDiv">
-
-        </div>
-      </div>
-      <div id="bottom"></div>
 
       <hr>
 
