--- a/other/privacy-policy.html
+++ b/other/privacy-policy.html
@@ -25,12 +25,13 @@ body{
 }
 
 .mText{
-  text-align: left;
+  text-align: justify;
   margin: 3rem 0;
   width: 80vw;
   font-size: large;
   line-height: 1.6;
 }
+
 
     </style>
     <link rel="stylesheet" href="../footer.css">
@@ -123,8 +124,8 @@ body{
             </div>
           </div>
             <div class="fLinks">
-              <a href="other/privacy-policy.html">Privacy Policy</a>
-              <a href="other/about-us.html">About us</a>
+              <a href="privacy-policy.html">Privacy Policy</a>
+              <a href="about-us.html">About us</a>
               <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
             </div>
                 <div id="copyright">&#169; Copyright</div>
