hmm. added a bit more msgs no yet> card.html,

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <!-- adsense -->
     <title>Clickjacker Tool | Test | Clickjacking Tester</title>
     <meta name="keywords" content="Test Clickjacking, Online clickjacking test, Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
      crossorigin="anonymous"></script>
-
-     <meta property="og:image" content=""/>
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -32,7 +30,8 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img 
-            src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+            src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png" 
+            alt="Free click jacking test, free click jacker tester, free live click jacker, .lve click jacker, click jacker .io, click-jacking, logo" width="50" height="50" class="d-inline-block align-text-top">
             <span class="navHeading">Click Jacking Tester</span>
           </a>
         </div>
@@ -60,6 +59,7 @@
       <div class="container-1 sec-con">
         <div class="sec-frame" id="sec-frame">
         </div>
+
         <div class="container-1">
           <div id="resultsDiv" class="none">
             <h2>Test results :</h2>
@@ -70,17 +70,10 @@
             <h5>Csp Header: <span id="resultAsp"></span></h5> <hr>
             <h5>Ip: <span id="resultIp"></span></h5> <hr>
           </div>
-          <div class="btn-ctner none" id="results">
-              </div>
-            </div>
-      </div>
-              <div class="container-1 ">
-          
-              </div>
+        </div>
       </div>
 
       <hr>
-
       <footer>
         <div class="fHead">
           <h3 class="fHeading">
