--- a/About-us/index.html
+++ b/About-us/index.html
@@ -36,7 +36,7 @@ section{
 
 
     </style>
-    <link rel="stylesheet" href="../footer.css">
+       <link rel="stylesheet" href="../stylsheets/footer.css">
     <!-- resuorces -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.2/cdn.js"></script>
@@ -129,8 +129,8 @@ section{
             </div>
           </div>
             <div class="fLinks">
-              <a href="privacy-policy.html">Privacy Policy</a>
-              <a href="about-us.html">About us</a>
+              <a href="../Privacy-policy">Privacy Policy</a>
+              <a href="index.html">About us</a>
               <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
             </div>
                 <div id="copyright">&#169; Copyright</div>
