--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- my stylings -->
     <script defer type="module" src="script.js"></script>
     <script defer type="module" src="data.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="card.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="stylsheets/style.css">
+    <link rel="stylesheet" href="stylsheets/card.css">
+    <link rel="stylesheet" href="stylsheets/footer.css">
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
     <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications, take screenshot, share results, test HTTP and HTTPS headers.">
@@ -76,7 +76,7 @@
             <br> <br>
       <div class="cardsCon">
         <div class="grid">
-          <a class="card" href="Whats click jacking">
+          <a class="card" href="Whats-clickjacking/index.html">
             <span class="icon">
               <svg
                 viewBox="0 0 24 24"
@@ -99,9 +99,10 @@
                 />
               </svg>
             </span>
-            <h4>Click Jacking</h4>
+            <h4>Whats Click Jacking?</h4>
             <p>
               Learn about Click Jacking / Ui Redressing attacks, what are they?
+              how they attack you, totally under 5 mins !
             </p>
             <div class="shine"></div>
             <div class="background">
@@ -125,7 +126,7 @@
               <div class="line line-3"></div>
             </div>
           </a>
-          <!-- <a class="card">
+          <a class="card">
             <span class="icon">
               <svg
                 viewBox="0 0 24 24"
@@ -148,10 +149,9 @@
                 />
               </svg>
             </span>
-            <h4>Categories</h4>
+            <h4>Quick POC </h4>
             <p>
-              Standard chunk of Lorem Ipsum used since the 1500s is showed below
-              for those interested.
+              Get premade report for vulnerability reports, a strong report to show to the client/teams.
             </p>
             <div class="shine"></div>
             <div class="background">
@@ -224,7 +224,7 @@
               <div class="line line-2"></div>
               <div class="line line-3"></div>
             </div>
-          </a> -->
+          </a>
         </div>
       </div>
       <hr>
@@ -259,16 +259,16 @@
               </a>
             </div>
           </div>
-            <div class="fLinks">
-              <a href="other/privacy-policy.html">Privacy Policy</a>
-              <a href="other/about-us.html">About us</a>
-              <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
-            </div>
-                <div id="copyright">&#169; Copyright</div>
-                <script>
-                  const copyElem = document.getElementById("copyright");
-                  copyElem.innerHTML += + new Date(). getFullYear() + " - All Rights Reserved";
-                  </script>
+<div class="fLinks">
+  <a href="Privacy-policy">Privacy Policy</a>
+  <a href="About-us">About us</a>
+  <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
+</div>
+  <div id="copyright">&#169; Copyright</div>
+  <script>
+    const copyElem = document.getElementById("copyright");
+    copyElem.innerHTML += + new Date(). getFullYear() + " - All Rights Reserved";
+  </script>
       </footer>
 
 </body>
