alot of thingies going on

--- a/Whats-clickjacking/index.html
+++ b/Whats-clickjacking/index.html
@@ -48,31 +48,31 @@
         <div class="txt">
         <h2>Clickjacking / UI redressing</h2>
 
-        <p>In this article we will discuss about -
-                <li><a href="#whats-ClickJacking">
-                    What is clickjacking?
-                </a></li>
-                <li><a href="#basic-clickjacking-attack">
-                    Making a basic clickjacking attack
-                </a></li>
-        </p>
+        <p>In this article we will discuss -
+          <li><a class="glink" href="#whats-ClickJacking">
+              What is clickjacking?
+          </a></li>
+          <li><a class="glink" href="#basic-clickjacking-attack">
+              Making a basic clickjacking attack
+          </a></li>
+  </p>
 
-        <h2 id="whats-ClickJacking">What is click-jacking?</h2>
+  <h2 id="whats-ClickJacking">What is click-jacking?</h2>
 
-        <p>ClickJacking is a UI-based attack in which the user is fooled into clicking on functional content from some other website hidden by the attacker. here's an example: 
-            <br> <br>
-            Imagine, you're searching for a website to help with your homework
-            You click on what seems like a helpful resource, and when clicked it secretly posts a promotional message on your social media profile without even letting you know about it, this deceptive tactic is known as a clickjacking attack.
-        </p>
-        <div class="img">
-            <img src="../assets/jacking.webp" width="90%" alt="What is click-jacking?">
-        </div>
+  <p>Click Jacking is a UI-based attack in which the user is fooled into clicking on functional content from some other website hidden by the attacker on a different website. let's understand this with an example: 
+      <br> <br>
+      Imagine, you're searching for a website to help with your homework
+      You click on what seems like a helpful resource, and when clicked it secretly posts a promotional message on your social media profile without even letting you know about it, this deceptive tactic is known as a clickjacking attack.
+  </p>
+  <div class="img">
+      <img src="../assets/jacking.webp" width="90%" alt="What is click-jacking?">
+  </div>
 
-        <h2 id="basic-clickjacking-attack">Making a basic clickjacking attack</h2>
-        <p>Most of the attackers use CSS to stack layers up on another layer loaded in an iframe, which tricks a user into clicking the iframe hidden beneath.
-        Here's a demo of click-jacking Attack
+  <h2 id="basic-clickjacking-attack">Making a basic clickjacking attack</h2>
+  <p>Most of the attackers use CSS to stack layers up on another layer loaded in an iframe, which tricks a user into clicking the iframe hidden beneath.
+  Here's a code demo of click-jacking Attack:-
 
-        </p>
+  </p>
         
         <pre class="code">
             <code class="html">
@@ -103,10 +103,13 @@
 &lt;/body&gt;
 &lt;/html&gt;
 </code>
-</pre>
-Hope you found this helpful !
-If you wants to test your site's security against clickjacking attacks or you want to make sure that your site isn't at risk,
-you can check that here - <a href="../index.html">2023 FREE Click Jacking tester</a> 
+        </pre>
+        <p>
+          Hope you found this helpful!
+If you want to test your site's security against clickjacking attacks or you want to make sure that your site isn't at risk,
+you can check that here - <a class="glink" href="../index.html">2023 FREE Click Jacking tester</a>
+        </p>
+ 
     </div>
 
         <div class="sidebar">
@@ -115,14 +118,14 @@ you can check that here - <a href="../index.html">2023 FREE Click Jacking tester
                 <img src="../assets/tester.webp" alt="free click jacking tester 2023">
                 <hr>
                 <h6>
-                  Test you site for click Jacking vulnerabilities.
+                  Test your site for click-jacking vulnerabilities.
                 </h6>
             </div>
           </a>
         </div>
     </div>
-
     <footer>
+      <hr>
         <div class="fHead">
           <h3 class="fHeading">
             Click Jacking Tester
