--- a/Privacy-policy/index.html
+++ b/Privacy-policy/index.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
     
     <title>Privacy Policy</title>
@@ -34,7 +34,13 @@ body{
 
 
     </style>
-    <link rel="stylesheet" href="../footer.css">
+    <!-- social sharing -->
+    <meta property="og:title" content="Clickjacking Tester">
+    <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications, take screenshot, share results, test HTTP and HTTPS headers.">
+    <meta property="og:image" content="https://i.ibb.co/2nsccvQ/Black-White-Elegant-Phone-Review-Blog-Banner.png">
+    <meta property="og:url" content="https://clickjacker.live">
+    <meta property="og:type" content="website">
+    <link rel="stylesheet" href="../stylsheets/footer.css">
     <!-- resuorces -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.2/cdn.js"></script>
@@ -124,8 +130,8 @@ body{
             </div>
           </div>
             <div class="fLinks">
-              <a href="privacy-policy.html">Privacy Policy</a>
-              <a href="about-us.html">About us</a>
+              <a href="index.html">Privacy Policy</a>
+              <a href="../About-us">About us</a>
               <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
             </div>
                 <div id="copyright">&#169; Copyright</div>
