made logo .webp for better perfomance

--- a/Privacy-policy/index.html
+++ b/Privacy-policy/index.html
@@ -50,7 +50,7 @@ body{
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img 
-            src="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+            src="../assets/logo.webp" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
             <span >Click Jacking Tester</span>
           </a>
         </div>
