--- a/Privacy-policy/index.html
+++ b/Privacy-policy/index.html
@@ -18,7 +18,7 @@
             box-sizing: border-box;
 }
 body{
-  background: #1b1b1b;
+  background: #1b1b1b !important;
   color: aliceblue;
   max-width: 100vw !important;
   overflow-x: hidden;
@@ -34,6 +34,9 @@ body{
 
 
     </style>
+     <!-- bootstrap -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
     <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications, take screenshot, share results, test HTTP and HTTPS headers.">
@@ -46,15 +49,22 @@ body{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.12.2/cdn.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" style="background-color: #1b1b1b !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img 
-            src="../assets/logo.webp" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
-            <span >Click Jacking Tester</span>
-          </a>
+  <nav style="background-color: #1b1a1a !important;" class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://clickjacker.live">Click Jacking Tester</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link " aria-current="page" href="https://clickjacker.live">Home</a>
+          <a class="nav-link" href="../About-us">About us</a>
+          <a class="nav-link active" href="../Privacy-policy">Privacy Policy</a>
+          <a class="nav-link" href="../POC">Quick POC</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
       
        <br>
     <section class="text-white">
