--- a/Whats-clickjacking/index.html
+++ b/Whats-clickjacking/index.html
@@ -33,19 +33,26 @@
     <meta property="og:type" content="website">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" style="background-color: #1b1b1b !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">
-            <img
-            src="../assets/logo.webp"
-            alt="Free click jacking test, free click jacker tester, free live click jacker, .lve click jacker, click jacker .io, click-jacking, logo" width="50" height="50" class="d-inline-block align-text-top">
-            <span class="navHeading">Click Jacking Tester</span>
-          </a>
+  <nav style="background-color: #1b1a1a !important;" class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://clickjacker.live">Click Jacking Tester</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" aria-current="page" href="https://clickjacker.live">Home</a>
+          <a class="nav-link" href="../About-us">About us</a>
+          <a class="nav-link" href="../Privacy-policy">Privacy Policy</a>
+          <a class="nav-link" href="../POC">Quick POC</a>
         </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
     <div class="cnt">
         <div class="txt">
+          <hr>
         <h2>Clickjacking / UI redressing</h2>
 
         <p>In this article we will discuss -
