--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Click Jacker Tool | BEST FREE Click Jacking Tester | 2023 Clickjacking Tester</title>
+    <title>Click Jacker Tool | BEST FREE Click Jacking Tester | Clickjacking Tester </title>
     <!-- adsense -->
     <meta name="keywords" content="Test Clickjacking, Online clickjacking test, Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
@@ -9,7 +9,7 @@
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> 
-    <meta name="description" content="Test for clickjacking vulnerabilities. Secure your web applications.">
+    <meta name="description" content="Test for clickjacking vulnerabilities in your website, Secure your web applications by identify clickjacking vulnerabilities in there.">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -29,17 +29,22 @@
     <link rel="canonical" href="https://clickjacker.live">
   </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" style="background-color: #1b1b1b !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img 
-            src="assets/logo.webp" 
-            alt="Free click jacking test, free click jacker tester, free live click jacker, .lve click jacker, click jacker .io, click-jacking, logo" width="50" height="50" class="d-inline-block align-text-top">
-            <span class="navHeading">Click Jacking Tester</span>
-          </a>
+  <nav style="background-color: #1b1a1a !important;" class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="https://clickjacker.live">Click Jacking Tester</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="https://clickjacker.live">Home</a>
+          <a class="nav-link" href="About-us">About us</a>
+          <a class="nav-link" href="Privacy-policy/index.html">Privacy Policy</a>
+          <a class="nav-link" href="POC">Quick POC</a>
         </div>
-    </nav>
-      
+      </div>
+    </div>
+  </nav>
       <div class="sec-1 section" id="sec-1">
         <div class="heading">
           <h1>Test your site</h1>
@@ -251,7 +256,7 @@
   <a href="About-us">About us</a>
   <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
 </div>
-  <div id="copyright">&#169; Copyright</div>
+  <div id="copyright"> &#169; Copyright </div>
   <script>
     const copyElem = document.getElementById("copyright");
     copyElem.innerHTML += + new Date(). getFullYear() + " - All Rights Reserved";
