--- a/About-us/index.html
+++ b/About-us/index.html
@@ -52,7 +52,7 @@ section{
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav  ms-auto">
           <a class="nav-link " aria-current="page" href="https://clickjacker.live">Home</a>
           <a class="nav-link active" href="../About-us">About us</a>
           <a class="nav-link" href="../Privacy-policy">Privacy Policy</a>
