--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="canonical" href="https://clickjacker.live">
   </head>
 <body>
+
   <nav style="background-color: #1b1a1a !important;" class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="https://clickjacker.live">Click Jacking Tester</a>
@@ -36,7 +37,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ms-auto">
           <a class="nav-link active" aria-current="page" href="https://clickjacker.live">Home</a>
           <a class="nav-link" href="About-us">About us</a>
           <a class="nav-link" href="Privacy-policy/index.html">Privacy Policy</a>
@@ -44,7 +45,7 @@
         </div>
       </div>
     </div>
-  </nav>
+  </nav> 
       <div class="sec-1 section" id="sec-1">
         <div class="heading">
           <h1>Test your site</h1>
@@ -256,7 +257,7 @@
   <a href="About-us">About us</a>
   <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
 </div>
-  <div id="copyright"> &#169; Copyright </div>
+  <div id="copyright">&#169; Copyright</div>
   <script>
     const copyElem = document.getElementById("copyright");
     copyElem.innerHTML += + new Date(). getFullYear() + " - All Rights Reserved";
